# flash-desktop

./: .gitignore  CLAUDE.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: auth.html  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  main.rs  mcp.rs  ws.rs
src-tauri/src/tools/: desktop.rs  filesystem.rs  mod.rs  shell.rs  system.rs
