[package]
name = "flash-desktop"
version = "0.1.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
keyring = "3"
hostname = "0.4"
dirs = "5"
walkdir = "2"
glob = "0.3"
open = "5"
arboard = "3"
url = "2"
shellexpand = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
